# informatyka_zadania_cpp

./: CMakeLists.txt  Iterator.hpp  L05_1_pierwsze_10.cpp  L05_2_malejacych_6.cpp  L05_3_co_druga.cpp  L05_4_odliczanie.cpp  L05_5_powtarzaj_imie.cpp  L05_6_prostokat.cpp  README.md
