cmake_minimum_required(VERSION 3.1)

project(Informatyka)

add_executable(pierwsze_10 L05_1_pierwsze_10.cpp)
add_executable(malejacych_6 L05_2_malejacych_6.cpp)
add_executable(co_druga L05_3_co_druga.cpp)
add_executable(odliczanie L05_4_odliczanie.cpp)
add_executable(powtarzaj_imie L05_5_powtarzaj_imie.cpp)
add_executable(prostokat L05_6_prostokat.cpp)
